--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,7 @@
 {
-  "name": "WIK test",
-  "version": "1.3",
+  "name": "아는단어",
+  "version": "1.6",
+  "description": "Words I know",
   "manifest_version": 2,
 
   "background": {
